--- a/index.html
+++ b/index.html
@@ -96,59 +96,78 @@
   </audio>
 
   <script>
-    const noBtn = document.getElementById("noBtn");
-    const yesBtn = document.getElementById("yesBtn");
-    const tease = document.getElementById("tease");
-    const card = document.getElementById("card");
-    const sound = document.getElementById("escapeSound");
+  const noBtn = document.getElementById("noBtn");
+  const yesBtn = document.getElementById("yesBtn");
+  const tease = document.getElementById("tease");
+  const card = document.getElementById("card");
+  const sound = document.getElementById("escapeSound");
 
-    // Detect touch device (mobile)
-    const isTouchDevice = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+  const isMobile = window.matchMedia("(pointer: coarse)").matches;
 
-    const teaseTexts = [
-      "Nice try 😜",
-      "Almost had it 😏",
-      "Nope 😌",
-      "You thought 😂",
-      "Try again 💨"
-    ];
+  let yesScale = 1;
 
-    function moveNoButton() {
-      if (!isTouchDevice) return;
+  const teaseTexts = [
+    "Nice try 😜",
+    "Absolutely not 😏",
+    "You’re persistent 😂",
+    "Still no 😌",
+    "Just press YES already 💖"
+  ];
 
-      const cardRect = card.getBoundingClientRect();
-      const x = Math.random() * (cardRect.width - 100);
-      const y = Math.random() * (cardRect.height - 80);
+  function moveNoButton() {
+    if (!isMobile) return;
 
-      noBtn.style.left = `${x}px`;
-      noBtn.style.top = `${y}px`;
+    const padding = 20;
+    const btnWidth = noBtn.offsetWidth;
+    const btnHeight = noBtn.offsetHeight;
 
-      tease.textContent = teaseTexts[Math.floor(Math.random() * teaseTexts.length)];
-      sound.currentTime = 0;
-      sound.play();
+    const maxX = window.innerWidth - btnWidth - padding;
+    const maxY = window.innerHeight - btnHeight - padding;
+
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
+
+    noBtn.style.position = "fixed";
+    noBtn.style.left = `${x}px`;
+    noBtn.style.top = `${y}px`;
+
+    tease.textContent =
+      teaseTexts[Math.floor(Math.random() * teaseTexts.length)];
+
+    // Sound
+    sound.currentTime = 0;
+    sound.play();
+
+    // Vibrate (mobile only)
+    if (navigator.vibrate) {
+      navigator.vibrate(80);
     }
 
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.textContent = "💖";
-      heart.style.left = Math.random() * 100 + "vw";
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 4000);
-    }
+    // Make YES bigger 😈
+    yesScale += 0.08;
+    yesBtn.style.transform = `scale(${yesScale})`;
+  }
 
-    if (isTouchDevice) {
-      noBtn.addEventListener("touchstart", moveNoButton);
-    }
+  function createHeart() {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.textContent = "💖";
+    heart.style.left = Math.random() * 100 + "vw";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 4000);
+  }
 
-    yesBtn.addEventListener("click", () => {
-      card.innerHTML = `
-        <h1>Yay!!! 💕🥰</h1>
-        <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" />
-      `;
-      setInterval(createHeart, 300);
-    });
-  </script>
+  if (isMobile) {
+    // Runs away before they tap
+    noBtn.addEventListener("pointerdown", moveNoButton);
+    noBtn.addEventListener("touchmove", moveNoButton);
+  }
 
-</body>
-</html>
+  yesBtn.addEventListener("click", () => {
+    card.innerHTML = `
+      <h1>Yay!!! 💕🥰</h1>
+      <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" />
+    `;
+    setInterval(createHeart, 250);
+  });
+</script>
